# src/services/bars/types.ts
@@ -17,7 +17,7 @@ export interface LightProperties {
 	type: string;
 	elevated?: boolean;
 	color?: string;
-	orientation?: 'left' | 'right' | 'both';
+	directionality?: 'uni-directional' | 'bi-directional';
 	intensity?: number;
 	ihp?: boolean;
 }
@@ -27,7 +27,6 @@ export interface BarsDBRecord {
 	type: 'stopbar' | 'leadon' | 'stand' | 'taxiway' | 'other';
 	elevated?: boolean; // Whether the point should have elevated lights
 	color?: string;
-	orientation: 'left' | 'right' | 'both';
 	intensity?: number;
 	directionality?: 'uni-directional' | 'bi-directional';
 	ihp?: boolean; // Whether this is an Intermediate Holding Point or not
